--- a/src/scss/components/_ads.scss
+++ b/src/scss/components/_ads.scss
@@ -1,4 +1,5 @@
 .ads {
+  margin-bottom: 30px;
   &__wrap {
     display: flex;
     justify-content: space-between;
@@ -12,7 +13,5 @@
     img {
       width: 100%;
     }
-  }
-  &__descr {
   }
 }
