--- a/src/scss/components/_filters.scss
+++ b/src/scss/components/_filters.scss
@@ -13,6 +13,7 @@
     visibility: visible;
     opacity: 1;
   }
+
   &__block {
     position: absolute;
     width: 35%;
@@ -24,7 +25,7 @@
     padding-right: 40px;
     transition: all 0.6s;
     z-index: 10;
-    overflow: auto;
+    /*     overflow: auto; */
     padding-bottom: 80px;
     &::-webkit-scrollbar {
       display: none;
@@ -38,6 +39,7 @@
   }
   &__wrap {
     display: flex;
+
     height: 100%;
     flex-direction: column;
     justify-content: space-between;
