--- a/src/scss/components/_filters.scss
+++ b/src/scss/components/_filters.scss
@@ -73,7 +73,7 @@
     display: flex;
     flex-wrap: wrap;
     gap: 8px;
-    max-width: 450px;
+    /*     max-width: 450px; */
     margin-bottom: 24px;
   }
   &__check {
