--- a/src/scss/components/_filters.scss
+++ b/src/scss/components/_filters.scss
@@ -25,7 +25,7 @@
     padding-right: 40px;
     transition: all 0.6s;
     z-index: 10;
-    /*     overflow: auto; */
+    overflow: auto;
     padding-bottom: 80px;
     &::-webkit-scrollbar {
       display: none;
@@ -87,11 +87,13 @@
     }
   }
   &__buttons {
-    display: flex;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+    padding-bottom: 40px;
   }
   .button {
-    padding: 13px 70px;
+    padding: 13px 0px;
     background: #ff7010;
     border-radius: 6px;
     font-style: normal;
