--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -48,4 +48,52 @@
     font-size: 25px;
     line-height: 28px;
   }
+  &__subtitle {
+    color: rgb(92, 99, 112);
+    font-size: 14px;
+    padding: 5px 0px;
+    line-height: 20px;
+  }
+  &__deletes {
+    font-weight: 400;
+
+    font-size: 14px;
+    line-height: 20px;
+    font-weight: 400;
+  }
+  &__del {
+    position: relative;
+    cursor: pointer;
+    outline: none;
+    background: transparent;
+    border: none;
+    margin: 0px;
+    padding: 0px;
+    padding-right: 5px;
+    font-size: 14px;
+    line-height: 20px;
+    &_active {
+      text-decoration: line-through;
+    }
+    &::before {
+      content: "";
+      position: absolute;
+      z-index: 1;
+      bottom: 0px;
+      left: 0px;
+      right: 16px;
+      border-bottom: 1px dashed rgb(92, 99, 112);
+    }
+    i {
+      display: inline-block;
+      vertical-align: middle;
+      margin-left: 3px;
+      svg {
+        margin-top: 5px;
+        display: inline-block;
+        max-width: 100%;
+        max-height: 100%;
+      }
+    }
+  }
 }
