--- a/src/scss/components/_foodlist.scss
+++ b/src/scss/components/_foodlist.scss
@@ -39,7 +39,7 @@
   }
   &__list {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(auto-fill, minmax(300px, auto));
     gap: 25px;
   }
 
@@ -89,7 +89,6 @@
     display: flex;
     flex-direction: column;
     margin-top: auto;
-    /*     padding: 0px 20px 20px; */
   }
 
   &__bottom {
