рефактор фильтров и модалка топпинги

--- a/src/scss/components/_foodlist.scss
+++ b/src/scss/components/_foodlist.scss
@@ -98,7 +98,7 @@
   }
 
   &__button {
-    background: #ff7010;
+    background-color: rgb(255, 105, 0);
     padding: 13px 32px;
 
     font-style: normal;
