--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -11,7 +11,14 @@
 .close-modal {
   position: absolute;
   top: 10px;
-  right: 10px;
+  right: -39px;
+  svg {
+    color: white;
+    path {
+      background-color: white;
+      color: white;
+    }
+  }
 }
 
 .modal.active,
@@ -24,7 +31,8 @@
   left: 50%;
   transform: translate(-50%, -50%);
   background-color: #fff;
-  width: 1070px;
+  width: 1080px;
+
   height: 680px;
   padding: 20px;
   display: none;
@@ -41,6 +49,15 @@
   }
   &__right {
     padding: 20px;
+    position: relative;
+    width: 100%;
+  }
+  &__scroll {
+    height: 85%;
+    position: absolute;
+    inset: 0px;
+    overflow: scroll;
+    overflow-x: hidden;
   }
   &__title {
     font-style: normal;
@@ -95,5 +112,113 @@
         max-height: 100%;
       }
     }
+  }
+  &__wrap {
+    height: 562px;
+  }
+  &__button {
+    margin: 0 auto;
+    width: 80%;
+    display: block;
+    background-color: rgb(255, 105, 0);
+    color: rgb(255, 255, 255);
+    height: 48px;
+    padding: 12px 24px;
+    font-size: 16px;
+    line-height: 24px;
+    text-align: center;
+    border-radius: 10px;
+    cursor: pointer;
+  }
+
+  &__selector {
+    margin-top: 20px;
+    display: flex;
+    /*     background-color: #f3f3f3; */
+    border-radius: 10px;
+    flex-direction: column;
+
+    ul {
+      display: flex;
+      border-radius: 20px;
+      background-color: rgb(243, 243, 247);
+      padding: 2px;
+      flex: 1;
+
+      &:first-of-type {
+        margin-bottom: 6px;
+      }
+
+      li {
+        text-align: center;
+        padding: 8px;
+        flex: 1;
+        cursor: pointer;
+        font-weight: 600;
+        font-size: 13px;
+
+        &.active {
+          background: #ffffff;
+          box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.04);
+          border-radius: 20px;
+          cursor: auto;
+        }
+      }
+    }
+  }
+  &__add {
+    display: block;
+    margin-top: 20px;
+    color: rgb(0, 0, 0);
+    font-size: 20px;
+    line-height: 24px;
+    font-weight: 600;
+    text-align: center;
+    /*     padding-left: 40px; */
+    margin-bottom: 12px;
+  }
+  &__addings {
+    margin-top: 20px;
+    display: grid;
+    justify-content: center;
+    grid-template-columns: repeat(auto-fill, minmax(80px, 106px));
+    /*     grid-template-columns: repeat(4, 1fr); */
+    gap: 20px;
+    margin-bottom: 20px;
+  }
+}
+.adding {
+  display: flex;
+  flex-direction: column;
+  background: rgb(255, 255, 255);
+  border-width: 1px;
+  border-style: solid;
+  border-color: rgb(255, 255, 255);
+  border-image: initial;
+  border-radius: 12px;
+  padding: 8px;
+  height: 180px;
+  border-radius: 12px;
+  cursor: pointer;
+  /*   box-shadow: rgba(6, 5, 50, 0.12) 0px 4px 10px; */
+  box-shadow: rgba(6, 5, 50, 0.12) 0px 4px 20px;
+  align-items: center;
+  &_active {
+    border: 1px solid rgb(255, 105, 0);
+  }
+  &__img {
+    img {
+      width: 90px;
+    }
+  }
+  &__name {
+    font-size: 12px;
+    line-height: 16px;
+    height: 32px;
+    text-align: center;
+  }
+  &__price {
+    margin-top: 8px;
+    font-weight: 500;
   }
 }
