--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -129,6 +129,11 @@
     text-align: center;
     border-radius: 10px;
     cursor: pointer;
+    transition: 0.5s all ease;
+    &:hover {
+      position: relative;
+      transform: scale(1.1);
+    }
   }
 
   &__selector {
@@ -156,6 +161,7 @@
         cursor: pointer;
         font-weight: 600;
         font-size: 13px;
+        transition: 0.5s all ease;
 
         &.active {
           background: #ffffff;
